syntax = "proto3";

option csharp_namespace = "GrpcTodo";

package todo;

service TodoService {
  rpc AddTodo (AddTodoRequest) returns (AddTodoResponse);
  rpc GetTodos (GetTodosRequest) returns (stream GetTodosResponse);
  rpc UpdateTodo (item) returns (item);

}
message item {
  int32 id = 1;
  string title = 2;
  string description = 3;
  bool isCompleted = 4;
  string dueDate = 5; // ISO 8601 date format
}


message AddTodoRequest {
  string title = 1;
  string description = 2;
  string dueDate = 3;
}

message AddTodoResponse {
  item item = 1;
}

message GetTodosRequest {
}

message GetTodosResponse {
  repeated item items = 1;
}

